# blender-depth-map-generator

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PR_REVIEW_v2.0.md  README.md  build_zip.py  code_review.md  depth_map_generator.py  pull-5.md  pyproject.toml  technical-review.md
depth_map_generator/: __init__.py  preferences.py  properties.py
depth_map_generator/operators/: __init__.py  mask_export.py  render.py  reset.py  setup.py
depth_map_generator/panels/: __init__.py  depth_settings_panel.py  main_panel.py  mask_panel.py  output_panel.py
depth_map_generator/utils/: __init__.py  nodes.py  paths.py
