[project]
name = "blender-depth-map-generator"
version = "2.0.0"
description = "Blender addon for depth map and alpha mask rendering"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Gero Doll"}]

[project.optional-dependencies]
dev = ["ruff>=0.2.0", "mypy>=1.8.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
